<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChitChat</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="activity_loginusernameinput_btnLogin">登录ChitChat</string>
    <string name="activity_loginusernameinput_edtPassword">输入密码</string>
    <string name="activity_loginusernameinput_edtUserName">输入手机号码</string>
    <string name="activity_loginusernameinput_errormsg_error">登录失败</string>
    <string name="activity_loginusernameinput_errormsg_nouserid">您输入的用户不存在!</string>
    <string name="activity_loginusernameinput_errormsg_pwd">输入的密码不正确</string>
    <string name="activity_loginusernameinput_errormsg_userfrozen">您的帐号被冻结</string>
    <string name="activity_loginusernameinput_forgetpw"><a href="#">忘记密码？</a></string>
    <string name="activity_loginusernameinput_login">@string/login</string>
    <string name="activity_loginusernameinput_logining">正在登录，请稍候...</string>
    <string name="activity_loginusernameinput_logout">退出当前账号</string>
    <string name="activity_loginusernameinput_title">账号登录</string>
    <string name="activity_loginusernameinput_tvForgetPW">忘记密码？</string>
    <string name="activity_loginusernameinput_username">用户名</string>
    <string name="activity_register_accountban">您的帐号被封</string>
    <string name="activity_register_deviceban">您的设备被封</string>
    <string name="activity_register_error">注册失败</string>
    <string name="activity_register_error_getverifycode">“验证码”获取失败</string>
    <string name="activity_register_fifthstep_tvBirthTitle">出生日期</string>
    <string name="activity_register_fifthstep_tvSexTip">注册成功后性别将不可更改</string>
    <string name="activity_register_fifthstep_tvSexTitle">选择性别</string>
    <string name="activity_register_firststep_edtInvitation">输入“邀请码”</string>
    <string name="activity_register_firststep_edtMobile">输入手机号码</string>
    <string name="activity_register_fourthstep_edtName">输入你的新“昵称”</string>
    <string name="activity_register_fourthstep_tvName">输入新昵称</string>
    <string name="activity_register_fourthstep_tvTips">起个好听的“昵称”</string>
    <string name="activity_register_invalidusername">您注册的用户名无效</string>
    <string name="activity_register_invalidverifycode">您输入的验证码不正确</string>
    <string name="activity_register_ipban">您的IP被封</string>
    <string name="activity_register_phone_number_not_match">验证码与申请的手机号码不匹配</string>
    <string name="activity_register_phone_number_sealed">你使用的手机号码已被封禁</string>
    <string name="activity_register_secondstep_edtVerifyCode">输入验证码</string>
    <string name="activity_register_secondstep_tvVerifyCode">验证码</string>
    <string name="activity_register_sixthstep_xiangcexuanqu">相册选取</string>
    <string name="activity_register_sixthstep_xianzaipaise">现在拍摄</string>
    <string name="activity_register_thirdstep_btnPassword">显示</string>
    <string name="activity_register_thirdstep_btnPassword_hidden">隐藏</string>
    <string name="activity_register_thirdstep_edtPassword">6-18位密码</string>
    <string name="activity_register_thirdstep_tvPassword">设置密码</string>
    <string name="activity_register_thirdstep_tvTips">设置帐号密码</string>
    <string name="activity_register_uploadportraitfailed">头像上传失败</string>
    <string name="activity_register_usernameexist">您注册的用户名已存在</string>
    <string name="activity_register_verifyusername">正在验证用户名和验证码，请稍候…</string>
    <string name="activity_registerfirststep_info">点击下一步表示同意用户协议</string>
    <string name="activity_registerphoto_header_title">设置头像</string>
    <string name="activity_registerphoto_tab_photo">设置头像</string>
    <string name="activity_registerprofile_attention">请注意，注册成功后性别将不可更改。</string>
    <string name="activity_registerprofile_birthday">出生日期</string>
    <string name="activity_registerprofile_header_title">填写基本资料</string>
    <string name="activity_registerprofile_man">男</string>
    <string name="activity_registerprofile_select_sex">选择性别</string>
    <string name="activity_registerprofile_tab_profile">填写资料</string>
    <string name="activity_registerprofile_woman">女</string>
    <string name="activity_registeruser_code_error">请输入正确的验证码</string>
    <string name="activity_registeruser_header_title">注册新账号</string>
    <string name="activity_registeruser_hit_id">用户名</string>
    <string name="activity_registeruser_password_error">请输入正确的密码：6-18位，字母区分大小写</string>
    <string name="activity_registeruser_register_accept">注册即表示你同意</string>
    <string name="activity_registeruser_tab_user">注册账号</string>
    <string name="activity_registeruser_title">@string/register</string>
    <string name="activity_registeruser_user_protocol"><a href="#">用户协议</a></string>
    <string name="activity_registeruser_username_error">请输入正确的用户名：2-10个字且不能全为数字</string>
    <string name="activity_resetpasswordfirststep_edtMobile">输入手机号码</string>
    <string name="activity_resetpasswordfirststep_qingshuru">请选择所在国家和地区区号，并输入手机号码。</string>
    <string name="activity_choosecountry_title">选择国家和地区</string>
    <string name="activity_resetpasswordfirststep_tvMobileTitle">手机号</string>
    <string name="activity_resetpasswordsecondstep_edtVerifyCode">输入收到的验证码</string>
    <string name="activity_resetpasswordsecondstep_fillVerifyCode">填写“验证码”</string>
    <string name="activity_resetpasswordsecondstep_tvVerifyCode">验证码</string>
    <string name="activity_resetpasswordthirdstep_edtInputPassword">输入新密码</string>
    <string name="activity_resetpasswordthirdstep_edtInputPasswordAgain">再次输入密码</string>
    <string name="activity_resetpasswordthirdstep_tvTips">设置帐号新密码</string>
    <string name="activity_resetpasswordthirdstep_resty">重置密码</string>
    <string name="resend_verification_code_via_sms">重新获取短信</string>
    <string name="next_step">下一步</string>
    <string name="commit">完成</string>
    <string name="find_title">找找</string>
    <string name="friend_title">朋友</string>
    <string name="send">发送</string>
    <string name="friends">好友</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="add_friends">添加好友</string>
    <string name="myGroup">我的群组</string>
    <string name="myJoinGroup">我加入的群组</string>
    <string name="myLike">聊你喜欢</string>
    <string name="nearbyGroup">附近群</string>
    <string name="hotGroup">热门群</string>
    <string name="classifyGroup">分类群</string>
    <string name="nearbyPeople">附近的人</string>
    <string name="searchGroup">搜群</string>
    <string name="searchPeople">搜人</string>
    <string name="search">搜索</string>
    <string name="searchGroupHint">请输入群的关键字或群号码</string>
    <string name="searchPeopleHint">请输入昵称或电话号码</string>
    <string name="createGroup">创建群组</string>
    <string name="themeShop">主题商店</string>
    <string name="expressionStore">表情商店</string>
    <string name="setting">设置</string>
    <string name="groupDetails">群详情</string>
    <string name="groupAlbum">群相册</string>
    <string name="groupMembers">群成员</string>
    <string name="closeNotice">关闭提示</string>
    <string name="openNotice">打开提示</string>
    <string name="share">分享</string>
    <string name="sendCard">发送名片</string>
    <string name="tureOff">关灯</string>
    <string name="personalDetails">个人详情</string>
    <string name="personalAlbum">个人相册</string>
    <string name="holdOnTape">按住录音</string>
    <string name="takePhoto">拍照</string>
    <string name="album">相册</string>
    <string name="location">位置</string>
    <string name="searchResults">查找结果</string>
    <string name="userNoDescription">此用户暂无签名</string>
    <string name="groupNoDescription">此群组暂无描述</string>
    <string name="justNow">刚刚</string>
    <string name="mylistview_header_hint_normal">下拉刷新</string>
    <string name="mylistview_header_hint_ready">松开刷新数据</string>
    <string name="mylistview_header_hint_loading">正在加载...</string>
    <string name="mylistview_header_last_time">上次更新时间：</string>
    <string name="mylistview_footer_hint_normal">查看更多</string>
    <string name="mylistview_footer_hint_ready">松开载入更多</string>
    <string name="userInfomatin">个人资料</string>
    <string name="showName">显示昵称</string>
    <string name="registerTime">注册时间</string>
    <string name="createTime">创建时间</string>
    <string name="mainBusiness">个人签名</string>
    <string name="sendUserCard">发送个人名片</string>
    <string name="sendGroupCard">发送个人名片</string>
    <string name="chitChatNum">ChitChat号</string>
    <string name="relation">关系</string>
    <string name="cancelAttention">取消关注</string>
    <string name="blackList">拉黑</string>
    <string name="blackListAndReport">拉黑并举报</string>
    <string name="groupNum">群号码</string>
    <string name="groupName">群名称</string>
    <string name="groupCreator">群主</string>
    <string name="groupDescription">群介绍</string>
    <string name="groupMember">群成员</string>
    <string name="belongGroup">所属群组</string>
    <string name="personalChat">私聊</string>
    <string name="chat">聊天</string>
    <string name="join">加入</string>
    <string name="stranger">陌生人</string>
    <string name="seconds">秒</string>
    <string name="slideFingers">手指上滑，可取消发送</string>
    <string name="loosenFingers">松开手指，取消发送</string>

</resources>