<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back" >

    <include layout="@layout/title" />

    <TextView
        android:id="@id/tvTips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18.0dip"
        android:layout_marginTop="83.0dip"
        android:singleLine="true"
        android:text="@string/activity_register_thirdstep_tvTips"
        android:textColor="#ff3e3e3e"
        android:textSize="16.0dip" />

    <View
        android:id="@id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_below="@id/tvTips"
        android:layout_marginTop="14.0dip"
        android:background="@color/clbg_diliver_color" />

    <LinearLayout
        android:id="@id/llPassword"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_below="@id/line1"
        android:background="#ffffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18.0dip"
        android:paddingRight="12.0dip" >

        <TextView
            android:id="@id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_thirdstep_tvPassword"
            android:textColor="#ff3e3e3e"
            android:textSize="16.0dip" />

        <EditText
            android:id="@id/edtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36.0dip"
            android:background="@android:color/transparent"
            android:hint="@string/activity_register_thirdstep_edtPassword"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ff3e3e3e"
            android:textColorHint="#ffcdcdcd"
            android:textSize="16.0dip" />
    </LinearLayout>

    <View
        android:id="@id/line2"
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_below="@id/llPassword"
        android:background="@color/clbg_diliver_color" />

    <Button
        android:id="@id/btnPassword"
        android:layout_width="wrap_content"
        android:layout_height="44.0dip"
        android:layout_below="@id/line2"
        android:layout_marginLeft="18.0dip"
        android:layout_marginTop="22.0dip"
        android:background="@drawable/retransmission_show_botton"
        android:paddingBottom="11.0dip"
        android:paddingLeft="17.0dip"
        android:paddingRight="17.0dip"
        android:paddingTop="11.0dip"
        android:text="@string/activity_register_thirdstep_btnPassword"
        android:textColor="@color/selector_color_register_button"
        android:textSize="14.0dip" />

</RelativeLayout>