<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context="com.example.chitchat.ResetPasswordStepThreeActivity" >

    <include layout="@layout/title" />

    <TextView
        android:id="@id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="70.0dip"
        android:text="@string/activity_resetpasswordthirdstep_tvTips"
        android:textColor="#ff3f4345"
        android:textSize="14.0dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTips"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/bg_round_white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:text="手机号码"
                android:textColor="#ff282828"
                android:textSize="19.0dip" />

            <TextView
                android:id="@id/tvMobile"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20.0dip"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="#ff282828"
                android:textSize="19.0dip" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/clbg_diliver_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:text="输入密码"
                android:textColor="#ff282828"
                android:textSize="19.0dip" />

            <EditText
                android:id="@id/edtInputPassword"
                android:layout_width="fill_parent"
                android:layout_height="56.0dip"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/activity_resetpasswordthirdstep_edtInputPassword"
                android:inputType="textPassword"
                android:paddingLeft="20.0dip"
                android:singleLine="true"
                android:textColor="#ff282828"
                android:textSize="19.0dip" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/clbg_diliver_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:text="重新输入"
                android:textColor="#ff282828"
                android:textSize="19.0dip" />

            <EditText
                android:id="@id/edtInputPasswordAgain"
                android:layout_width="fill_parent"
                android:layout_height="56.0dip"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/activity_resetpasswordthirdstep_edtInputPasswordAgain"
                android:inputType="textPassword"
                android:paddingLeft="20.0dip"
                android:singleLine="true"
                android:textColor="#ff282828"
                android:textSize="19.0dip" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>